Passage de la requête en https

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
             // Open an obejct (GET/POST, PATH, 
             // ASYN-TRUE/FALSE) 
-            xhr.open("GET",  "http://api.lagence.cda3.lh.manusien-ecolelamanu.fr/api/v1/roles", true); 
+            xhr.open("GET",  "https://api.lagence.cda3.lh.manusien-ecolelamanu.fr/api/v1/roles", true); 
   
   
   
