--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
             // Instantiate an new XHR Object 
             const xhr = new XMLHttpRequest(); 
   
-            // Open an obejct (GET/POST, PATH, 
-            // ASYN-TRUE/FALSE) 
-            xhr.open("GET",  "https://api.lagence.cda3.lh.manusien-ecolelamanu.fr/api/v1/roles", true); 
+            // Open an obejct (GET/POST, PATH, ASYN-TRUE/FALSE) 
+            xhr.open("GET",  "http://api.lagence.cda3.lh.manusien-ecolelamanu.fr/api/v1/roles", true); 
   
   
   
